// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SinglePostContent - Snapshots > matches snapshot when not authenticated 1`] = `
<div>
  <div
    data-post-id="author:post123"
    data-testid="post-page-header"
  >
    PostPageHeader
  </div>
  <div
    data-post-id="author:post123"
    data-testid="single-post-card"
  >
    SinglePostCard
  </div>
</div>
`;

exports[`SinglePostContent - Snapshots > matches snapshot with deleted parent post 1`] = `
<div>
  <div
    data-post-id="author:post123"
    data-testid="post-page-header"
  >
    PostPageHeader
  </div>
  <div
    data-class-name="rounded-md py-0"
    data-testid="card"
  >
    <div
      data-testid="post-deleted"
    >
      Post deleted
    </div>
  </div>
  <div
    data-class-name="mb-6 flex"
    data-override-defaults="true"
    data-testid="container"
  >
    <div
      data-class-name="mb-12 w-full min-w-0 flex-1 gap-0 overflow-hidden sm:mb-0"
      data-testid="container"
    >
      <div
        data-class-name="ml-3"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          data-post-id="author:post123"
          data-show-quick-reply="false"
          data-testid="thread-tree"
        >
          ThreadTree
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SinglePostContent - Snapshots > matches snapshot with long post (article) 1`] = `
<div>
  <div
    data-post-id="author:post123"
    data-testid="post-page-header"
  >
    PostPageHeader
  </div>
  <div
    data-content="# Article Title

Article content"
    data-is-blurred="false"
    data-post-id="author:post123"
    data-testid="single-post-article"
  >
    SinglePostArticle
  </div>
  <div
    data-class-name="mb-6 flex"
    data-override-defaults="true"
    data-testid="container"
  >
    <div
      data-class-name="mb-12 w-full min-w-0 flex-1 gap-0 overflow-hidden sm:mb-0"
      data-testid="container"
    >
      <div
        data-class-name="ml-3"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          data-post-id="author:post123"
          data-show-quick-reply="true"
          data-testid="thread-tree"
        >
          ThreadTree
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SinglePostContent - Snapshots > matches snapshot with short post and no replies 1`] = `
<div>
  <div
    data-post-id="author:post123"
    data-testid="post-page-header"
  >
    PostPageHeader
  </div>
  <div
    data-post-id="author:post123"
    data-testid="single-post-card"
  >
    SinglePostCard
  </div>
  <div
    data-class-name="mb-6 flex"
    data-override-defaults="true"
    data-testid="container"
  >
    <div
      data-class-name="mb-12 w-full min-w-0 flex-1 gap-0 overflow-hidden sm:mb-0"
      data-testid="container"
    >
      <div
        data-class-name="ml-3"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          data-post-id="author:post123"
          data-show-quick-reply="true"
          data-testid="thread-tree"
        >
          ThreadTree
        </div>
      </div>
    </div>
  </div>
</div>
`;
